# engineer-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.claude/skills/epic/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-layer.md  authentication.md  ui-rendering.md
docs/architecture/decisions/: 0001-terminal-error-notification-model.md  README.md
docs/designs/: MISSING.md  README.md  assisted-capture.dc.html  books.html  cross-cutting-concerns.dc.html  daily-loop.brief.md  design-system.dc.html  home.dc.html  notes.dc.html  offline-write.dc.html  progress.dc.html  terminal-tokens.css  timer.dc.html  week-planning.dc.html
docs/designs/briefs/: README.md
docs/designs/briefs/proposed/: assisted-capture.brief.md  cross-cutting.brief.md  home.brief.md  notes.brief.md  offline-write.brief.md  progress.brief.md  terminal-client.brief.md  week-planning.brief.md
docs/designs/briefs/shipped/: activities.brief.md  assisted-capture.brief.md  command-palette.brief.md  cross-cutting.brief.md  home.brief.md  notes.brief.md  offline-write.brief.md  progress.brief.md  review.brief.md  terminal-client.brief.md  timer-gaps.brief.md  timer.brief.md  week-planning.brief.md
src/: config.rs  editor.rs  inbox_cli.rs  log_cli.rs  main.rs  messages.rs  note_cli.rs  progress_cli.rs  queue_cli.rs  target_cli.rs  timer_cache.rs  timer_cli.rs  timer_clock.rs  today_cli.rs  week_cli.rs
src/api/: activities.rs  audit.rs  automations.rs  books.rs  capture.rs  domains.rs  envelope.rs  error.rs  mod.rs  notes.rs  progress.rs  review.rs  segments.rs  targets.rs  timer.rs  today.rs  weeks.rs
src/app/: action.rs  capture.rs  command.rs  event.rs  mod.rs
src/app/screens/: activities.rs  activity_new.rs  audit.rs  book_detail.rs  books.rs  connect.rs  home.rs  inbox.rs  login.rs  mod.rs  notes.rs  progress.rs  queue.rs  review.rs  settings.rs  timer.rs  week.rs
src/auth/: mod.rs  oauth.rs  storage.rs
src/queue/: client.rs  fold.rs  intent.rs  mod.rs  replay.rs  resolve.rs  store.rs  view.rs
src/ui/: blocking.rs  fuzzy.rs  layout.rs  mod.rs  notify.rs  panel.rs  picker.rs  search.rs  theme.rs  widgets.rs
