[package]
name = "engineer-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Terminal client for the Engineer study-tracking app"
license = "MIT"

[[bin]]
name = "engineer"
path = "src/main.rs"

[dependencies]
ratatui      = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm    = { version = "0.28", features = ["event-stream"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
tokio-stream = "0.1"
futures      = "0.3"

reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
url          = { version = "2", features = ["serde"] }

keyring      = "3"
open         = "5"
base64       = "0.22"
sha2         = "0.10"
rand         = "0.8"

jiff         = { version = "0.1", features = ["serde"] }
directories  = "5"
toml         = "0.8"

clap         = { version = "4", features = ["derive", "env"] }
color-eyre   = "0.6"
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"

tui-input    = "0.10"
tui-textarea = "0.7"

[dev-dependencies]
tokio        = { version = "1", features = ["test-util"] }
